[package]
name = "count-files"
version = "0.2.0"
authors = ["Yin Guobing <yinguobing@gmail.com>"]
description = "Count files by extension."
documentation = "https://github.com/yinguobing/count-files"
homepage = "https://github.com/yinguobing/count-files"
repository = "https://github.com/yinguobing/count-files"
keywords = ["count-files"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
comfy-table = "5.0.1"
clap = { version = "3.1.8", features = ["derive"] }
indicatif = "0.16.2"
log = "0.4.17"
env_logger = "0.9.0"