[package]
name = "count-files"
version = "0.2.1"
authors = ["Yin Guobing <yinguobing@gmail.com>"]
description = "Count files by extension."
documentation = "https://github.com/yinguobing/count-files"
homepage = "https://github.com/yinguobing/count-files"
repository = "https://github.com/yinguobing/count-files"
keywords = ["count-files"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
comfy-table = "7.1.4"
clap = { version = "4.5.38", features = ["derive"] }
indicatif = "0.17.11"
log = "0.4.27"
env_logger = "0.11.8"

# Build a DEB package
[package.metadata.deb]
maintainer = "Yin Guobing <yinguobing@gmail.com>"
copyright = "2024, Yin Guobing <yinguobing@gmail.com>"
extended-description = """\
A simple file counter."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/count-files",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/count-files/README",
        "644",
    ],
]
